--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <title>Factors Behind the Chart</title>
 
   <!-- Uncomment if using d3: -->
-  <!-- <script src="https://cdn.jsdelivr.net/npm/d3@7.9.0/dist/d3.min.js"></script> -->
+ <script src="https://cdn.jsdelivr.net/npm/d3@7.9.0/dist/d3.min.js"></script>
 
   <!-- Uncomment if using Vega-Lite -->
   <!-- <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
