--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- Uncomment if you want your page to NOT be indexed by search engines: -->
-  <!-- <meta name="robots" content="none"> -->
+  <meta name="robots" content="none">
+  <script src="main.js"></script>
   <link rel="stylesheet" href="style.css" />
   <title>Factors Behind the Chart</title>
 
@@ -24,7 +25,7 @@
 
 <body>
   <header>
-    <h1><a href=".">TODO: Your project name</a></h1>
+    <h1><a href=".">What could affect S&P 500 Price?</a></h1>
 
     <p>
       <strong>Team Members</strong>: Sophia Susanto and Julia Lee
@@ -43,6 +44,12 @@
     <script>
         createLineChart();
     </script>
+    *Data ranges from Jan 1928 - Oct 2020<br>
+    <h4>External Resources</h4>
+    <strong><a href="http://kaggle.com/datasets/henryhan117/sp-500-historical-data">Data Source</a> </strong><br>
+    <strong><a href="https://observablehq.com/@uwdata/introduction-to-d3-part-1">D3 Part 1</a> </strong><br>
+    <strong><a href="https://observablehq.com/@uwdata/introduction-to-d3-part-2">D3 Part 2</a> </strong><br>
+    <strong><a href="https://observablehq.com/@d3/gallery">D3 Examples</a> </strong><br>
   </center>
 
   <footer>
