--- a/public/index.html
+++ b/public/index.html
@@ -40,11 +40,14 @@
       <input type="date" id="end-date">
       <button type="button" id="date-change">Change</button>
     </div>
-    <div id="chart-container"></div> 
-    <script>
+    <br>
+    <div id="chart-container">
+      <script>
         createLineChart();
-    </script>
-    *Data ranges from Jan 1928 - Oct 2020<br>
+      </script>
+    </div> 
+    <p>*Data ranges from Jan 1928 - Oct 2020</p>
+    <br>
     <h4>External Resources</h4>
     <strong><a href="http://kaggle.com/datasets/henryhan117/sp-500-historical-data">Data Source</a> </strong><br>
     <strong><a href="https://observablehq.com/@uwdata/introduction-to-d3-part-1">D3 Part 1</a> </strong><br>
