--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
         createLineChart();
       </script>
     </div> 
-    <p>*Data ranges from Jan 1928 - Oct 2020</p>
+    <p id="info">*Data ranges from Jan 1928 - Oct 2020</p>
     <br>
     <h4>External Resources</h4>
     <strong><a href="http://kaggle.com/datasets/henryhan117/sp-500-historical-data">Data Source</a> </strong><br>
