--- a/public/index.html
+++ b/public/index.html
@@ -48,11 +48,14 @@
     </div> 
     <p id="info">*Data ranges from Jan 1928 - Oct 2020</p>
     <br>
-    <h4>External Resources</h4>
-    <strong><a href="http://kaggle.com/datasets/henryhan117/sp-500-historical-data">Data Source</a> </strong><br>
-    <strong><a href="https://observablehq.com/@uwdata/introduction-to-d3-part-1">D3 Part 1</a> </strong><br>
-    <strong><a href="https://observablehq.com/@uwdata/introduction-to-d3-part-2">D3 Part 2</a> </strong><br>
-    <strong><a href="https://observablehq.com/@d3/gallery">D3 Examples</a> </strong><br>
+    <div id="external-resources">
+      <h4>External Resources</h4>
+      <strong><a href="https://kaggle.com/datasets/henryhan117/sp-500-historical-data">Data Source - S&P 500 Historical Data</a> </strong><br>
+      <strong><a href="https://kaggle.com/datasets/federalreserve/interest-rates">Data Source - Federal Reserve Interest Rates</a> </strong><br>
+      <strong><a href="https://observablehq.com/@uwdata/introduction-to-d3-part-1">D3 Part 1</a> </strong><br>
+      <strong><a href="https://observablehq.com/@uwdata/introduction-to-d3-part-2">D3 Part 2</a> </strong><br>
+      <strong><a href="https://observablehq.com/@d3/gallery">D3 Examples</a> </strong><br>
+    </div>
   </center>
 
   <footer>
