Improvements on the charts zone

--- a/public/index.html
+++ b/public/index.html
@@ -34,9 +34,9 @@
   <center>
     <div id="date-range-container">
       <label for="start-date">Start Date:</label>
-      <input type="date" id="start-date">
+      <input type="date" id="start-date" min="1954-07-01" max="2017-03-16">
       <label for="end-date">End Date:</label>
-      <input type="date" id="end-date">
+      <input type="date" id="end-date" min="1954-07-01" max="2017-03-16">
       <button type="button" id="date-change">Change</button>
     </div>
     <br>
